--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "gulp-uglify": "^1.5.3",
     "json-server": "^0.8.4",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0"
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "jade": "^1.11.0"
   }
 }
