--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "gulp-json-srv": "^0.1.1",
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.3",
+    "html-browserify": "0.0.6",
     "json-server": "^0.8.4",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "jquery": "^2.2.1",
+    "lodash": "^4.6.1"
   }
 }
